# show.t-rex

./: README.md  main.py  pyproject.toml
